--- a/src/container/skills.hbs
+++ b/src/container/skills.hbs
@@ -14,7 +14,7 @@
                 {{name}}
 
                 {{#if point includeZero=true}} ({{point}}) {{/if}}
-                {{#if isTop}} (TOP) {{/if}}
+                {{#if isTop}} (2134269) {{/if}}
 
                 {{#unless point includeZero=true}} (не вивчаємо) {{/unless}}
 
